# Images2Video

./: .gitmodules  CMakeLists.txt  README.md
Images2Video/: CMakeLists.txt  image.cpp  image.h  main.cpp  video_writer.cpp  video_writer.h
